--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "eonasdan/bootstrap-datetimepicker",
   "type": "component",
-  "version": "4.17.49",
+  "version": "4.18.0-iserv",
   "description": "Date/time picker widget based on twitter bootstrap",
   "keywords": [
     "bootstrap",
