--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "type": "git",
     "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
   },
-  "version": "4.17.49"
+  "version": "4.18.0-iserv"
 }
